BoaUAT/src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>Average_Cost__c</fullName>
        <description>AVECOST in EXO Stock_Items Object.</description>
        <label>Average Cost</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bulk_Buy_Price__c</fullName>
        <description>SELLPRICE18 in Exo on stock_Item Object</description>
        <label>Bulk Buy Price</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contractor_Price__c</fullName>
        <description>SELLPRICE2 in Exo on stock_Item Object</description>
        <label>Contractor Price</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Price__c</fullName>
        <description>SELLPRICE17 in Exo on stock_Item Object</description>
        <label>Dealer Price</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Cost__c</fullName>
        <description>LATESTCOST in EXO Stock_Items Object.</description>
        <label>Last Cost</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <description>SELLPRICE1 in Exo on stock_Item Object</description>
        <label>Retail Price</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Cost__c</fullName>
        <description>STDCOST in EXO Stock_Items Object.</description>
        <label>Standard Cost</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplier_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>SupplierCOST in EXO Stock_Items Object.</description>
        <label>Supplier Cost</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Price__c</fullName>
        <description>SELLPRICE3 in Exo on stock_Item Object</description>
        <label>Trade Price</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wholesale_Price__c</fullName>
        <description>SELLPRICE16 in Exo on stock_Item Object</description>
        <label>Wholesale Price</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
</CustomObject>